--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 }
 
+run {
+    standardInput(System.in)
+}
+
 test {
     useJUnitPlatform()
 }
