--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
 }
 
 group = 'hexlet.code'
@@ -24,7 +25,7 @@ dependencies {
 }
 
 run {
-    standardInput(System.in)
+    standardInput = System.in
 }
 
 test {
